--- a/textmesh/index.html
+++ b/textmesh/index.html
@@ -73,7 +73,8 @@ model-viewer {
   * Work done while interning at Google.
   </p>
   <p class="center_text" align="center">
-  Accepted at 3DV
+  Accepted at 3DV</br>
+  A great open source reimplementation of the first stage 1 based on Neuralangelo and DeepFloyd IF can be found at <a href="https://github.com/threestudio-project/threestudio">threestudio</a>.
   </p>
 <br>
 </span>
